@@ -123,7 +123,8 @@ int APIENTRY WinMain(HINSTANCE hInst, HINSTANCE hPrevInstance, LPSTR lpCmdLine, 
 	ilInit();
 	iluInit();
 	ilutRenderer(ILUT_WIN32);
-	ilEnable(IL_USE_UNICODE);
+	ilEnable(IL_UNICODE);
+	ilEnable(IL_UTF16_FILENAMES);
 
 	// Is there a file to load from the command-line?
 	if (__argc > 1) {
